--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
-name: trading
+name: trading311
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
+  - python=3.11
   - pandas
   - yfinance
   - matplotlib
